# e108

./: .gitignore  CHANGES.txt  Pipfile  README.md  example.env  pyproject.toml  requirements.txt  setup.cfg
scripts/: atualizatodomundo.py
src/e108/: __init__.py  __main__.py  _version.py  api.py  dbo.py  web.py
src/e108/api/: agendador.py  common.py  v1.py  v2.py
src/e108/models/: bb.py
src/e108/models/bb/: v2.py
src/e108/templates/: battleball.html  comunidade.html  default_layout.html  error.html  index.html  info.html
src/hobrsite/: __init__.py  _version.py  web.py
src/hobrsite/api/: __init__.py  agendador.py
src/hobrsite/models/bb/: v1.py
src/hobrsite/templates/: battleball.html  comunidade.html  default_layout.html  info.html
src/hobrsite/templates/battleball/: graph1.html  index.html
