[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
#[tool.pytest.ini_options]
#log_cli = 1
#log_level = 'INFO'
#[tool.poetry.scripts]
## DESENVOLVIMENTO
#dev = "uvicorn src.hobrsite.web:app --reload"
## TESTE
#test = "python -m hobrsite test"
## HOMOLOGAÇÃO
#homo = "echo adoro"
## PRODUÇÃO
#prod = "python -m hobrsite"
